@@ -20,6 +20,7 @@ package org.apache.wayang.api.sql;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import static org.mockito.Mockito.mock;
 
 import java.io.ByteArrayInputStream;
@@ -31,6 +32,7 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -65,9 +67,12 @@ import org.apache.calcite.sql.SqlOperator;
 import org.apache.calcite.sql.fun.SqlStdOperatorTable;
 import org.apache.calcite.sql.parser.SqlParseException;
 import org.apache.calcite.sql.type.SqlTypeName;
+import org.apache.calcite.tools.FrameworkConfig;
 import org.apache.calcite.tools.Frameworks;
+import org.apache.calcite.tools.RelBuilder;
 import org.apache.calcite.tools.RuleSet;
 import org.apache.calcite.tools.RuleSets;
+
 import org.apache.wayang.api.sql.calcite.convention.WayangConvention;
 import org.apache.wayang.api.sql.calcite.converter.functions.FilterPredicateImpl;
 import org.apache.wayang.api.sql.calcite.converter.functions.ProjectMapFuncImpl;
@@ -84,12 +89,15 @@ import org.apache.wayang.core.mapping.PlanTransformation;
 import org.apache.wayang.core.plan.wayangplan.Operator;
 import org.apache.wayang.core.plan.wayangplan.PlanTraversal;
 import org.apache.wayang.core.plan.wayangplan.WayangPlan;
+import org.apache.wayang.core.util.Tuple;
 import org.apache.wayang.java.Java;
 import org.apache.wayang.jdbc.execution.JdbcExecutor;
+import org.apache.wayang.jdbc.operators.JdbcGlobalReduceOperator;
 import org.apache.wayang.jdbc.operators.JdbcProjectionOperator;
 import org.apache.wayang.jdbc.operators.JdbcTableSource;
 import org.apache.wayang.postgres.mapping.ProjectionMapping;
 import org.apache.wayang.spark.Spark;
+
 import org.json.simple.parser.ParseException;
 import org.junit.jupiter.api.Test;
 
@@ -97,26 +105,64 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 class SqlToWayangRelTest {
+    @Test
+    public void serializeFilter() throws Exception {
+        // create filterPredicateImpl for serialisation
+        final RelDataTypeFactory typeFactory = new JavaTypeFactoryImpl();
+        final RexBuilder rb = new RexBuilder(typeFactory);
+        final RexNode leftOperand = rb.makeInputRef(typeFactory.createSqlType(SqlTypeName.VARCHAR), 0);
+        final RexNode rightOperand = rb.makeLiteral("test");
+        final RexNode cond = rb.makeCall(SqlStdOperatorTable.EQUALS, leftOperand, rightOperand);
+        final SerializablePredicate<?> fpImpl = new FilterPredicateImpl(cond);
 
-    /**
-     * Method for building {@link WayangPlan}s useful for testing, benchmarking and
-     * other usages where you want to handle the intermediate {@link WayangPlan}
-     *
-     * @param sql     sql query string with the {@code ;} cut off
-     * @param udfJars
-     * @return a {@link WayangPlan} of a given sql string
-     * @throws SqlParseException
-     * @throws SQLException
-     */
-    private Tuple2<Collection<Record>, WayangPlan> buildCollectorAndWayangPlan(final SqlContext context,
-            final String sql, final String... udfJars) throws SqlParseException, SQLException {
+        final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+        final ObjectOutputStream objectOutputStream = new ObjectOutputStream(byteArrayOutputStream);
+        objectOutputStream.writeObject(fpImpl);
+        objectOutputStream.close();
+
+        final ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(byteArrayOutputStream.toByteArray());
+        final ObjectInputStream objectInputStream = new ObjectInputStream(byteArrayInputStream);
+        final Object deserializedObject = objectInputStream.readObject();
+        objectInputStream.close();
+
+        assertTrue(((FilterPredicateImpl) deserializedObject).test(new Record("test")));
+    }
+
+    @Test
+    void sqlApiReduceTest() throws Exception {
+        final JavaTypeFactoryImpl typeFactory = new JavaTypeFactoryImpl();
+
+        final VolcanoPlanner planner = new VolcanoPlanner(RelOptCostImpl.FACTORY, Contexts.empty());
+        planner.addRelTraitDef(ConventionTraitDef.INSTANCE);
+
+        final SchemaPlus rootSchema = Frameworks.createRootSchema(true);
+        final RelDataType rowType = new Builder(typeFactory).add("ID", typeFactory.createJavaType(Integer.class))
+                .add("NAME", typeFactory.createJavaType(String.class)).build();
+
+        rootSchema.add("T1", new AbstractTable() {
+            @Override
+            public RelDataType getRowType(final RelDataTypeFactory typeFactory) {
+                return rowType;
+            }
+        });
+
+        final FrameworkConfig config = Frameworks.newConfigBuilder().defaultSchema(rootSchema)
+                .costFactory(RelOptCostImpl.FACTORY).build();
+
+        final RelBuilder relBuilder = RelBuilder.create(config);
+
+        final RelNode relTree = relBuilder.scan("T1").aggregate(relBuilder.groupKey(), relBuilder.count()).build();
+
+        final SqlDialect dialect = SqlDialect.DatabaseProduct.CALCITE.getDialect();
+        final RelToSqlConverter converter = new RelToSqlConverter(dialect);
+        final SqlNode sqlNode = converter.visitRoot(relTree).asStatement();
+
         final Properties configProperties = Optimizer.ConfigProperties.getDefaults();
         final RelDataTypeFactory relDataTypeFactory = new JavaTypeFactoryImpl();
 
-        final Optimizer optimizer = Optimizer.create(SchemaUtils.getSchema(context.getConfiguration()),
-                configProperties, relDataTypeFactory);
+        final Optimizer optimizer = Optimizer.create(CalciteSchema.from(rootSchema), configProperties,
+                relDataTypeFactory);
 
-        final SqlNode sqlNode = optimizer.parseSql(sql);
         final SqlNode validatedSqlNode = optimizer.validate(sqlNode);
         final RelNode relNode = optimizer.convert(validatedSqlNode);
 
@@ -128,11 +174,36 @@ class SqlToWayangRelTest {
         final RelNode wayangRel = optimizer.optimize(relNode, relNode.getTraitSet().plus(WayangConvention.INSTANCE),
                 rules);
 
-        final Collection<Record> collector = new ArrayList<>();
+        final WayangPlan plan = Optimizer.convert(wayangRel, new ArrayList<Record>());
 
-        final WayangPlan wayangPlan = Optimizer.convertWithConfig(wayangRel, context.getConfiguration(), collector);
+        final ProjectionMapping projectionMapping = new ProjectionMapping();
+        final PlanTransformation projectionTransformation = projectionMapping.getTransformations().iterator().next()
+                .thatReplaces();
 
-        return new Tuple2<>(collector, wayangPlan);
+        final org.apache.wayang.postgres.mapping.GlobalReduceMapping globalReduceMapping = new org.apache.wayang.postgres.mapping.GlobalReduceMapping();
+        final PlanTransformation globalReduceTransformation = globalReduceMapping.getTransformations().iterator().next()
+                .thatReplaces();
+
+        plan.applyTransformations(List.of(projectionTransformation, globalReduceTransformation));
+
+        final Collection<Operator> operators = PlanTraversal.upstream().traverse(plan.getSinks()).getTraversedNodes();
+
+        final JdbcTableSource table = operators.stream().filter(op -> op instanceof JdbcTableSource)
+                .map(JdbcTableSource.class::cast).findFirst().orElseThrow();
+        final JdbcGlobalReduceOperator globalReduce = operators.stream()
+                .filter(op -> op instanceof JdbcGlobalReduceOperator).map(JdbcGlobalReduceOperator.class::cast)
+                .findFirst().orElseThrow();
+
+        final HashMap<Operator, List<Operator>> edges = new HashMap<>();
+
+        edges.put(globalReduce, List.of(table));
+        edges.put(table, List.of());
+
+        final JdbcExecutor jdbcExecutor = mock();
+        final StringBuilder query = JdbcExecutor.createSqlString(jdbcExecutor, table, Arrays.asList(), null,
+                globalReduce, null, null, Arrays.asList());
+
+        assertTrue(query.toString().contains("COUNT"), "expected query to contain 'count', got: " + query);
     }
 
     @Test
@@ -152,7 +223,6 @@ class SqlToWayangRelTest {
         assertTrue(!result.isEmpty());
         assertTrue(result.stream().allMatch(field -> field.getField(1).equals(1)));
     }
-
 
     @Test
     void javaFilterWithCast() throws Exception {
@@ -197,7 +267,7 @@ class SqlToWayangRelTest {
 
         final RelOptTable t1 = relOptSchema.getTableForMember(Arrays.asList("T1"));
 
-        final TableScan scan1 = LogicalTableScan.create(cluster, t1, List.of());
+        final TableScan scan1 = LogicalTableScan.create(cluster, t1, Arrays.asList());
 
         final SqlDialect dialect = SqlDialect.DatabaseProduct.CALCITE.getDialect();
         final RelToSqlConverter converter = new RelToSqlConverter(dialect);
@@ -226,17 +296,20 @@ class SqlToWayangRelTest {
         final PlanTransformation projectionTransformation = projectionMapping.getTransformations().iterator().next()
                 .thatReplaces();
 
-        plan.applyTransformations(List.of(projectionTransformation));
+        plan.applyTransformations(Arrays.asList(projectionTransformation));
 
         final Collection<Operator> operators = PlanTraversal.upstream().traverse(plan.getSinks()).getTraversedNodes();
 
         final JdbcTableSource table = operators.stream().filter(op -> op instanceof JdbcTableSource)
-                .map(JdbcTableSource.class::cast).findFirst().orElseThrow();
+                .map(JdbcTableSource.class::cast).findFirst()
+                .orElseThrow(() -> new RuntimeException("Table not found"));
         final JdbcProjectionOperator projection = operators.stream().filter(op -> op instanceof JdbcProjectionOperator)
-                .map(JdbcProjectionOperator.class::cast).findFirst().orElseThrow();
+                .map(JdbcProjectionOperator.class::cast).findFirst()
+                .orElseThrow(() -> new RuntimeException("Projection not found"));
 
         final JdbcExecutor jdbcExecutor = mock();
-        final StringBuilder query = JdbcExecutor.createSqlString(jdbcExecutor, table, List.of(), projection, List.of());
+        final StringBuilder query = JdbcExecutor.createSqlString(jdbcExecutor, table, Arrays.asList(), projection, null,
+                null, null, Arrays.asList());
 
         assertEquals("SELECT ID, NAME FROM T1;", query.toString());
     }
@@ -293,7 +366,7 @@ class SqlToWayangRelTest {
 
         sqlContext.execute(wayangPlan);
 
-        final Record rec = result.stream().findFirst().orElseThrow();
+        final Record rec = result.stream().findFirst().orElseThrow(() -> new RuntimeException("No record found"));
         assertEquals(2, rec.size());
         assertEquals(3, rec.getInt(1));
     }
@@ -312,7 +385,7 @@ class SqlToWayangRelTest {
 
         sqlContext.execute(wayangPlan);
 
-        final Record rec = result.stream().findFirst().orElseThrow();
+        final Record rec = result.stream().findFirst().orElseThrow(() -> new RuntimeException("No record found"));
         assertEquals(2, rec.size());
         assertEquals(3, rec.getInt(1));
     }
@@ -343,7 +416,8 @@ class SqlToWayangRelTest {
         sqlContext.execute(wayangPlan);
 
         assertEquals(1, result.size());
-        assertEquals(0.875f, result.stream().findFirst().orElseThrow().getDouble(0));
+        assertEquals(0.875f,
+                result.stream().findFirst().orElseThrow(() -> new RuntimeException("No record found")).getDouble(0));
     }
 
     @Test
@@ -407,7 +481,7 @@ class SqlToWayangRelTest {
 
         sqlContext.execute(wayangPlan);
 
-        final List<Record> shouldBe = List.of(new Record("item1", "item2", "item1", "item2", "item3"),
+        final List<Record> shouldBe = Arrays.asList(new Record("item1", "item2", "item1", "item2", "item3"),
                 new Record("item1", "item2", "item1", "item2", "item3"),
                 new Record("item1", "item2", "item1", "item2", "item3"),
                 new Record("item1", "item2", "item1", "item2", "item3"), new Record("item1", "item2", "x", "x", "x"),
@@ -536,7 +610,7 @@ class SqlToWayangRelTest {
         final WayangPlan wayangPlan = t.field1;
         sqlContext.execute(wayangPlan);
 
-        final List<Record> shouldBe = List.of(new Record("test1", "test1", "test2", "test1", "test1", "test2"),
+        final List<Record> shouldBe = Arrays.asList(new Record("test1", "test1", "test2", "test1", "test1", "test2"),
                 new Record("test2", "", "test2", "", "test2", "test2"),
                 new Record("", "test2", "test2", "test2", "", "test2"));
 
@@ -548,12 +622,6 @@ class SqlToWayangRelTest {
         assertEquals(resultTally, shouldBeTally);
     }
 
-    // Imagine case: l = {item1, item2}, r = {item3,item4}, j = {item1, item2,
-    // item3, item4} join on =($1,$3) would be =(item2, item4) in the join set
-    // however from the r set we need to factor in the
-    // offset, $3 -> 3 - l.size() = $1, r($1) = "item4" we cannot naively assume
-    // that it is always ordered as =(lRef,rRef), lRef < rRef.
-    // it may also be =($3,$1)
     @Test
     void joinWithLargeLeftTableIndexMirrorAlias() throws Exception {
         final SqlContext sqlContext = createSqlContext("/data/largeLeftTableIndex.csv");
@@ -566,7 +634,7 @@ class SqlToWayangRelTest {
         final WayangPlan wayangPlan = t.field1;
         sqlContext.execute(wayangPlan);
 
-        final List<Record> shouldBe = List.of(new Record("test1", "test1", "test2", "test1", "test1", "test2"),
+        final List<Record> shouldBe = Arrays.asList(new Record("test1", "test1", "test2", "test1", "test1", "test2"),
                 new Record("test2", "", "test2", "", "test2", "test2"),
                 new Record("", "test2", "test2", "test2", "", "test2"));
 
@@ -611,12 +679,11 @@ class SqlToWayangRelTest {
 
         sqlContext.execute(wayangPlan);
 
-        final Record rec = result.stream().findFirst().orElseThrow();
+        final Record rec = result.stream().findFirst().orElseThrow(() -> new RuntimeException("No record found"));
         assertEquals(2, rec.size());
         assertEquals(3, rec.getInt(1));
     }
 
-    // tests sql-apis ability to serialize projections and joins
     @Test
     void sparkInnerJoin() throws Exception {
         final SqlContext sqlContext = createSqlContext("/data/largeLeftTableIndex.csv");
@@ -633,7 +700,7 @@ class SqlToWayangRelTest {
 
         sqlContext.execute(wayangPlan);
 
-        final List<Record> shouldBe = List.of(new Record("test1", "test1", "test2", "test1", "test1", "test2"),
+        final List<Record> shouldBe = Arrays.asList(new Record("test1", "test1", "test2", "test1", "test1", "test2"),
                 new Record("test2", "", "test2", "", "test2", "test2"),
                 new Record("", "test2", "test2", "test2", "", "test2"));
 
@@ -660,12 +727,12 @@ class SqlToWayangRelTest {
         final SqlOperator add = SqlStdOperatorTable.PLUS;
         final SqlOperator multiply = SqlStdOperatorTable.MULTIPLY;
 
-        final RexNode addition = rb.makeCall(add, List.of(inputRefX, inputRefB));
-        final RexNode multiplication = rb.makeCall(multiply, List.of(addition, inputRefY));
+        final RexNode addition = rb.makeCall(add, Arrays.asList(inputRefX, inputRefB));
+        final RexNode multiplication = rb.makeCall(multiply, Arrays.asList(addition, inputRefY));
 
         final RexCall projection = (RexCall) multiplication;
 
-        final ProjectMapFuncImpl impl = new ProjectMapFuncImpl(List.of(projection));
+        final ProjectMapFuncImpl impl = new ProjectMapFuncImpl(Arrays.asList(projection));
 
         final ByteArrayOutputStream byteOutStream = new ByteArrayOutputStream();
         final ObjectOutputStream outStream = new ObjectOutputStream(byteOutStream);
@@ -680,29 +747,6 @@ class SqlToWayangRelTest {
         final Record testRecord = new Record(1, 2, 3);
 
         assertEquals(impl.apply(testRecord), deserializedImpl.apply(testRecord));
-    }
-
-    @Test
-    public void serializeFilter() throws Exception {
-        // create filterPredicateImpl for serialisation
-        final RelDataTypeFactory typeFactory = new JavaTypeFactoryImpl();
-        final RexBuilder rb = new RexBuilder(typeFactory);
-        final RexNode leftOperand = rb.makeInputRef(typeFactory.createSqlType(SqlTypeName.VARCHAR), 0);
-        final RexNode rightOperand = rb.makeLiteral("test");
-        final RexNode cond = rb.makeCall(SqlStdOperatorTable.EQUALS, leftOperand, rightOperand);
-        final SerializablePredicate<?> fpImpl = new FilterPredicateImpl(cond);
-
-        final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-        final ObjectOutputStream objectOutputStream = new ObjectOutputStream(byteArrayOutputStream);
-        objectOutputStream.writeObject(fpImpl);
-        objectOutputStream.close();
-
-        final ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(byteArrayOutputStream.toByteArray());
-        final ObjectInputStream objectInputStream = new ObjectInputStream(byteArrayInputStream);
-        final Object deserializedObject = objectInputStream.readObject();
-        objectInputStream.close();
-
-        assertTrue(((FilterPredicateImpl) deserializedObject).test(new Record("test")));
     }
 
     @Test
@@ -731,7 +775,8 @@ class SqlToWayangRelTest {
         final WayangPlan wayangPlan = t.field1;
         sqlContext.execute(wayangPlan);
 
-        assertEquals("AA", result.stream().findAny().orElseThrow().getString(0));
+        assertEquals("AA",
+                result.stream().findAny().orElseThrow(() -> new RuntimeException("No record found")).getString(0));
     }
 
     @Test
@@ -784,6 +829,151 @@ class SqlToWayangRelTest {
 
         assertEquals(result.size(), 1);
         assertEquals(result.stream().findFirst().get().getInt(0), 3);
+    }
+
+    @Test
+    void sqlApiMultiConditionJoinGeneratesJdbcSql() throws Exception {
+        final JavaTypeFactoryImpl typeFactory = new JavaTypeFactoryImpl();
+        final RexBuilder rexBuilder = new RexBuilder(typeFactory);
+
+        final VolcanoPlanner planner = new VolcanoPlanner(RelOptCostImpl.FACTORY, Contexts.empty());
+        planner.addRelTraitDef(ConventionTraitDef.INSTANCE);
+        final RelOptCluster cluster = RelOptCluster.create(planner, rexBuilder);
+
+        final SchemaPlus rootSchema = Frameworks.createRootSchema(true);
+        final RelDataType ordersRowType = new Builder(typeFactory)
+                .add("order_id", typeFactory.createJavaType(Integer.class))
+                .add("customer_id", typeFactory.createJavaType(Integer.class))
+                .add("product_id", typeFactory.createJavaType(Integer.class)).build();
+
+        final RelDataType shipmentsRowType = new Builder(typeFactory)
+                .add("order_id", typeFactory.createJavaType(Integer.class))
+                .add("customer_id", typeFactory.createJavaType(Integer.class))
+                .add("ship_date", typeFactory.createJavaType(String.class)).build();
+
+        rootSchema.add("orders", new AbstractTable() {
+            @Override
+            public RelDataType getRowType(final RelDataTypeFactory typeFactory) {
+                return ordersRowType;
+            }
+        });
+
+        rootSchema.add("shipments", new AbstractTable() {
+            @Override
+            public RelDataType getRowType(final RelDataTypeFactory typeFactory) {
+                return shipmentsRowType;
+            }
+        });
+
+        final Properties configProperties = Optimizer.ConfigProperties.getDefaults();
+        final RelDataTypeFactory relDataTypeFactory = new JavaTypeFactoryImpl();
+
+        final Optimizer optimizer = Optimizer.create(CalciteSchema.from(rootSchema), configProperties,
+                relDataTypeFactory);
+
+        final SqlNode sqlNode = optimizer.parseSql(
+                "SELECT * FROM orders JOIN shipments ON orders.order_id = shipments.order_id AND orders.customer_id = shipments.customer_id");
+        final SqlNode validatedSqlNode = optimizer.validate(sqlNode);
+        final RelNode relNode = optimizer.convert(validatedSqlNode);
+
+        final RuleSet rules = RuleSets.ofList(CoreRules.FILTER_INTO_JOIN, WayangRules.WAYANG_TABLESCAN_RULE,
+                WayangRules.WAYANG_TABLESCAN_ENUMERABLE_RULE, WayangRules.WAYANG_PROJECT_RULE,
+                WayangRules.WAYANG_FILTER_RULE, WayangRules.WAYANG_JOIN_RULE, WayangRules.WAYANG_AGGREGATE_RULE,
+                WayangRules.WAYANG_SORT_RULE);
+
+        final RelNode wayangRel = optimizer.optimize(relNode, relNode.getTraitSet().plus(WayangConvention.INSTANCE),
+                rules);
+
+        final WayangPlan plan = Optimizer.convert(wayangRel, new ArrayList<Record>());
+
+        final ProjectionMapping projectionMapping = new ProjectionMapping();
+        final PlanTransformation projectionTransformation = projectionMapping.getTransformations().iterator().next()
+                .thatReplaces();
+
+        plan.applyTransformations(Arrays.asList(projectionTransformation));
+
+        final Collection<Operator> operators = PlanTraversal.upstream().traverse(plan.getSinks()).getTraversedNodes();
+
+        final JdbcTableSource ordersTable = operators.stream().filter(op -> op instanceof JdbcTableSource)
+                .map(JdbcTableSource.class::cast).filter(table -> table.getTableName().equals("orders")).findFirst()
+                .orElseThrow(() -> new RuntimeException("Orders table not found"));
+
+        final JdbcTableSource shipmentsTable = operators.stream().filter(op -> op instanceof JdbcTableSource)
+                .map(JdbcTableSource.class::cast).filter(table -> table.getTableName().equals("shipments")).findFirst()
+                .orElseThrow(() -> new RuntimeException("Shipments table not found"));
+
+        assertNotNull(ordersTable, "orders table should be present");
+        assertNotNull(shipmentsTable, "shipments table should be present");
+
+        final org.apache.wayang.basic.operators.JoinOperator<?, ?, ?> joinOp = operators.stream()
+                .filter(op -> op instanceof org.apache.wayang.basic.operators.JoinOperator)
+                .map(op -> (org.apache.wayang.basic.operators.JoinOperator<?, ?, ?>) op).findFirst()
+                .orElseThrow(() -> new RuntimeException("Join operator not found"));
+
+        assertNotNull(joinOp, "Join operator should be present");
+
+        // Verify the join operator has SQL implementations with correct field names
+        // This validates that WayangMultiConditionJoinVisitor called
+        // withSqlImplementation()
+        final Tuple<String, String> leftSqlImpl = joinOp.getKeyDescriptor0().getSqlImplementation();
+        final Tuple<String, String> rightSqlImpl = joinOp.getKeyDescriptor1().getSqlImplementation();
+
+        assertNotNull(leftSqlImpl, "Left join key should have SQL implementation");
+        assertNotNull(rightSqlImpl, "Right join key should have SQL implementation");
+
+        // Verify table names
+        assertEquals("orders", leftSqlImpl.field0, "Left table should be 'orders'");
+        assertEquals("shipments", rightSqlImpl.field0, "Right table should be 'shipments'");
+
+        // Verify field names are comma-separated (multi-condition)
+        final String leftFields = leftSqlImpl.field1;
+        final String rightFields = rightSqlImpl.field1;
+
+        assertTrue(leftFields.contains("order_id") && leftFields.contains("customer_id"),
+                "Left SQL implementation should contain both order_id and customer_id, got: " + leftFields);
+        assertTrue(rightFields.contains("order_id") && rightFields.contains("customer_id"),
+                "Right SQL implementation should contain both order_id and customer_id, got: " + rightFields);
+
+        // Verify comma-separated format
+        assertTrue(leftFields.contains(","), "Left fields should be comma-separated for multi-condition join");
+        assertTrue(rightFields.contains(","), "Right fields should be comma-separated for multi-condition join");
+    }
+
+    /**
+     * Method for building {@link WayangPlan}s useful for testing, benchmarking and
+     * other usages where you want to handle the intermediate {@link WayangPlan}
+     *
+     * @param sql     sql query string with the {@code ;} cut off
+     * @param udfJars
+     * @return a {@link WayangPlan} of a given sql string
+     * @throws SqlParseException
+     * @throws SQLException
+     */
+    private Tuple2<Collection<Record>, WayangPlan> buildCollectorAndWayangPlan(final SqlContext context,
+            final String sql, final String... udfJars) throws SqlParseException, SQLException {
+        final Properties configProperties = Optimizer.ConfigProperties.getDefaults();
+        final RelDataTypeFactory relDataTypeFactory = new JavaTypeFactoryImpl();
+
+        final Optimizer optimizer = Optimizer.create(SchemaUtils.getSchema(context.getConfiguration()),
+                configProperties, relDataTypeFactory);
+
+        final SqlNode sqlNode = optimizer.parseSql(sql);
+        final SqlNode validatedSqlNode = optimizer.validate(sqlNode);
+        final RelNode relNode = optimizer.convert(validatedSqlNode);
+
+        final RuleSet rules = RuleSets.ofList(CoreRules.FILTER_INTO_JOIN, WayangRules.WAYANG_TABLESCAN_RULE,
+                WayangRules.WAYANG_TABLESCAN_ENUMERABLE_RULE, WayangRules.WAYANG_PROJECT_RULE,
+                WayangRules.WAYANG_FILTER_RULE, WayangRules.WAYANG_JOIN_RULE, WayangRules.WAYANG_AGGREGATE_RULE,
+                WayangRules.WAYANG_SORT_RULE);
+
+        final RelNode wayangRel = optimizer.optimize(relNode, relNode.getTraitSet().plus(WayangConvention.INSTANCE),
+                rules);
+
+        final Collection<Record> collector = new ArrayList<>();
+
+        final WayangPlan wayangPlan = Optimizer.convertWithConfig(wayangRel, context.getConfiguration(), collector);
+
+        return new Tuple2<>(collector, wayangPlan);
     }
 
     private SqlContext createSqlContext(final String tableResourceName)
